Replace deprecated new URL constructors in admin-tests, webtest proxy, and v2-tests
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>