@@ -20,6 +20,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.StringWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -65,7 +66,7 @@ public class ConnectionUtils {
 
     public static HttpURLConnection openConnection(String url) {
         try {
-            return (HttpURLConnection) new URL(url).openConnection();
+            return (HttpURLConnection) URI.create(url).toURL().openConnection();
         } catch (IOException e) {
             throw new IllegalArgumentException(e);
         }
