@@ -45,8 +45,8 @@ public class WebTest {
 
     public void doTest() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                          + contextRoot + "/dbReader");
+        URL url = URI.create("http://" + host  + ":" + port
+                          + contextRoot + "/dbReader").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
