@@ -256,7 +256,7 @@ public class httpd implements Runnable,LogMessage
                     else if(server_response.statusCode==302 || server_response.statusCode==307) {
                         System.out.println("Inside Redirection******************************");
                         String Host=server_response.mh.get("Location");
-                        URL newurl=new URL(Host);
+                        URL newurl=URI.create(Host).toURL();
                         String actualhost=newurl.getHost();
                         Socket serversocket=new Socket(actualhost,80);
                         start=Host.indexOf("://")+3;
@@ -327,7 +327,7 @@ public class httpd implements Runnable,LogMessage
                         String Host=server_response.mh.get("Location");
                         //System.out.println("New host is"+Host);
 
-                        URL newurl=new URL(Host);
+                        URL newurl=URI.create(Host).toURL();
                         String actualhost=newurl.getHost();
                         Socket serversocket=new Socket(actualhost,80);
                         start=Host.indexOf("://")+3;
